force-app/main/default/objects/Script__c/fields/Avg_Buy_Price__c.field-meta.xml
<CustomField>
    <fullName>Avg_Buy_Price__c</fullName>
    <formula>Current_Holdings__c  /  Qty_Holding__c</formula>
    <label>Avg Buy Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>