force-app/main/default/objects/Script__c/fields/Current_Holdings__c.field-meta.xml
<CustomField>
    <fullName>Current_Holdings__c</fullName>
    <description>Amount currently holding</description>
    <label>Current Holdings</label>
    <summarizedField>Investment__c.Buy_Amt__c</summarizedField>
    <summaryFilterItems>
        <field>Investment__c.Holding__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Investment__c.Script__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>