force-app/main/default/objects/Script__c/fields/Profit_Booked__c.field-meta.xml
<CustomField>
    <fullName>Profit_Booked__c</fullName>
    <label>Profit Booked</label>
    <summarizedField>Investment__c.Profit_Amount__c</summarizedField>
    <summaryForeignKey>Investment__c.Script__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>