force-app/main/default/objects/Script__c/fields/Qty_Holding__c.field-meta.xml
<CustomField>
    <fullName>Qty_Holding__c</fullName>
    <label>Qty Holding</label>
    <summarizedField>Investment__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Investment__c.Holding__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Investment__c.Script__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>