force-app/main/default/objects/Script__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Current_Holdings__c</columns>
    <columns>Profit_Booked__c</columns>
    <columns>Qty_Holding__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>